--- a/template/package.json
+++ b/template/package.json
@@ -9,18 +9,18 @@
     "dev": "vitest",
     "format": "prettier --check ."
   },
-  "dependencies": {},
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
+    "csv-parse": "^5.5.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-unused-imports": "^3.1.0",
+    "openai": "^5.6.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.2",
-    "vitest": "^1.4.0",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
-    "csv-parse": "^5.5.3"
+    "vitest": "^1.4.0"
   }
-} 
+}
